--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
 		"tokenizer_define.h": "c",
 		"ast_define.h": "c",
 		"signal.h": "c",
-		"minishell_lib.h": "c"
+		"minishell_lib.h": "c",
+		"expand_utils.h": "c"
 	}
 }
