--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
 		"minishell_utils.h": "c",
 		"expand_utils.h": "c",
 		"expand_define.h": "c",
-		"tokenizer_utils.h": "c"
+		"tokenizer_utils.h": "c",
+		"history.h": "c"
 	}
 }
