--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
 		"expand_utils.h": "c",
 		"expand_define.h": "c",
 		"tokenizer_utils.h": "c",
-		"history.h": "c"
+		"history.h": "c",
+		"stdio.h": "c",
+		"stddef.h": "c"
 	}
 }
