--- a/khanadat_proto/Makefile
+++ b/khanadat_proto/Makefile
@@ -6,7 +6,7 @@
 #    By: khanadat <khanadat@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/09 14:24:07 by khanadat          #+#    #+#              #
-#    Updated: 2025/10/19 19:54:15 by khanadat         ###   ########.fr        #
+#    Updated: 2025/10/21 15:48:10 by khanadat         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,7 +29,7 @@ INCS_FLAGS	:=	-I . \
 				-I exec/builtin \
 				-I exec/expand \
 				-I exec/set_redirect \
-				-I $(LIBFT_DIR)/includes \
+				-I $(LIBFT_DIR)/includes
 
 SRCS		=	main.c \
 				ast/ast_utils_cmd.c \
@@ -81,6 +81,75 @@ SRCS		=	main.c \
 				utils/minishell_utils2.c \
 				utils/minishell_utils3.c \
 				utils/minishell_utils4.c
+
+BONUS_INCS_FLAGS	:=	-I bonus \
+						-I bonus/ast \
+						-I bonus/err \
+						-I bonus/exec \
+						-I bonus/utils \
+						-I bonus/prompt \
+						-I bonus/ast/tokenizer \
+						-I bonus/exec/builtin \
+						-I bonus/exec/expand \
+						-I bonus/exec/set_redirect \
+						-I $(LIBFT_DIR)/includes
+
+BONUS_SRCS	=	bonus/main_bonus.c \
+				bonus/ast/ast_utils_cmd_bonus.c \
+				bonus/ast/ast_utils_is0_bonus.c \
+				bonus/ast/ast_utils_is1_bonus.c \
+				bonus/ast/ast_utils_is2_bonus.c \
+				bonus/ast/ast_utils_new_node_bonus.c \
+				bonus/ast/ast_utils_red_bonus.c \
+				bonus/ast/ast_utils_valid_bonus.c \
+				bonus/ast/ast_utils_bonus.c \
+				bonus/ast/ast_bonus.c \
+				bonus/err/minishell_err0_bonus.c \
+				bonus/err/minishell_err1_bonus.c \
+				bonus/err/minishell_err2_bonus.c \
+				bonus/err/minishell_err3_bonus.c \
+				bonus/exec/exec_bonus.c \
+				bonus/exec/exec_utils0_bonus.c \
+				bonus/exec/exec_utils1_bonus.c \
+				bonus/exec/exec_pipe_bonus.c \
+				bonus/exec/exec_pipe_utils_bonus.c \
+				bonus/exec/get_path_bonus.c \
+				bonus/exec/set_redirect/set_redirect_bonus.c \
+				bonus/exec/set_redirect/set_redirect_utils_bonus.c \
+				bonus/prompt/prompt_bonus.c \
+				bonus/prompt/minishell_set_bonus.c \
+				bonus/ast/tokenizer/tokenizer_bonus.c \
+				bonus/ast/tokenizer/tokenizer_utils_bonus.c \
+				bonus/ast/tokenizer/tokenizer_validate_bonus.c \
+				bonus/exec/builtin/builtin_bonus.c \
+				bonus/exec/builtin/builtin_cd0_bonus.c \
+				bonus/exec/builtin/builtin_cd1_bonus.c \
+				bonus/exec/builtin/builtin_echo_bonus.c \
+				bonus/exec/builtin/builtin_env_bonus.c \
+				bonus/exec/builtin/builtin_exit_bonus.c \
+				bonus/exec/builtin/builtin_export_bonus.c \
+				bonus/exec/builtin/builtin_pwd_bonus.c \
+				bonus/exec/builtin/builtin_unset_bonus.c \
+				bonus/exec/expand/add_new_utils_bonus.c \
+				bonus/exec/expand/classify_utils0_bonus.c \
+				bonus/exec/expand/classify_utils1_bonus.c \
+				bonus/exec/expand/expand_wc_red_bonus.c \
+				bonus/exec/expand/expand_wc_utils_bonus.c \
+				bonus/exec/expand/expand_wc_word_bonus.c \
+				bonus/exec/expand/expand_bonus.c \
+				bonus/exec/expand/expand_utils_add_bonus.c \
+				bonus/exec/expand/expand_utils_bonus.c \
+				bonus/utils/minishell_utils0_bonus.c \
+				bonus/utils/minishell_utils1_bonus.c \
+				bonus/utils/minishell_utils2_bonus.c \
+				bonus/utils/minishell_utils3_bonus.c \
+				bonus/utils/minishell_utils4_bonus.c
+
+OBJS_DIR		=	objs
+OBJS			=	$(addprefix $(OBJS_DIR)/, $(SRCS:.c=.o))
+
+BONUS_OBJS_DIR	=	bonus_objs
+BONUS_OBJS		=	$(addprefix $(BONUS_OBJS_DIR)/, $(BONUS_SRCS:.c=.o))
 
 OBJS_DIR	=	objs
 OBJS		=	$(addprefix $(OBJS_DIR)/, $(SRCS:.c=.o))
